--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -28,10 +29,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.2.2",
+    "@angular-eslint/builder": "13.3.0",
+    "@angular-eslint/eslint-plugin": "13.3.0",
+    "@angular-eslint/eslint-plugin-template": "13.3.0",
+    "@angular-eslint/schematics": "13.3.0",
+    "@angular-eslint/template-parser": "13.3.0",
     "@angular/cli": "^13.1.4",
     "@angular/compiler-cli": "^13.1.3",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.20.43",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint": "^8.17.0",
     "jasmine-core": "~3.10.0",
     "karma": "^6.3.13",
     "karma-chrome-launcher": "~3.1.0",
